--- a/pom.xml
+++ b/pom.xml
@@ -109,11 +109,15 @@
 			<artifactId>caelum-stella-core</artifactId>
 			<version>2.1.3</version>
 		</dependency>
-
+		
 		<dependency>
-			<groupId>com.google.guava</groupId>
-			<artifactId>guava</artifactId>
-			<version>29.0-jre</version>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+        </dependency>
+		
+		<dependency>
+			<groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
 		</dependency>
 
 
