--- a/pom.xml
+++ b/pom.xml
@@ -159,6 +159,12 @@
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-jcache</artifactId>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.awaitility</groupId>
+			<artifactId>awaitility</artifactId>
+			<version>3.1.2</version>
+		</dependency>
 
 	</dependencies>
 	<build>
