--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>pizzaria</name>
 	<description>Um site de uma pizzaria</description>
+	<packaging>jar</packaging>
 
 	<properties>
 		<java.version>1.8</java.version>
@@ -172,6 +173,9 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+            		<executable>true</executable>
+        		</configuration>
 			</plugin>
 		</plugins>
 	</build>
