--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,8 @@
 	<description>Um site de uma pizzaria</description>
 	<packaging>war</packaging>
 
+
+
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
@@ -170,6 +172,7 @@
 
 	</dependencies>
 	<build>
+		<finalName>pizzaria</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
